src/src/objects/EMPLOYEE__c.object
<CustomObject>
    <fields>
        <fullName>CANDIDATE__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CANDIDATE</label>
        <referenceTo>CANDIDATES__c</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COURSE__c</fullName>
        <label>COURSE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>DEVOPS</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>AZURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPERIENCE__c</fullName>
        <label>EXPERIENCE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JOB_STATUS__c</fullName>
        <label>JOB STATUS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>L1-SELECTED</fullName>
                </value>
                <value>
                    <fullName>L1-REJECTED</fullName>
                </value>
                <value>
                    <fullName>L2-SELECTED</fullName>
                </value>
                <value>
                    <fullName>L2-REJECTED</fullName>
                </value>
                <value>
                    <fullName>HR SELECTED</fullName>
                </value>
                <value>
                    <fullName>HR-REJECTED</fullName>
                </value>
                <value>
                    <fullName>RECALLED</fullName>
                </value>
                <value>
                    <fullName>OFFER LETTER APRROVED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EMPLOYEE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EMPLOYEE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMPLOYEES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>